--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Tut Files Finder</h1>
   <p>Here you can find <strong>tut files</strong> and go to these files in only <strong>one click</strong></p>
-  <a href="tut4.html">Tut 4</a><br>
+  <a href="tut4.html" target="_blank">Tut 4</a><br>
   <a href="tut5.html">Tut 5</a><br>
   <a href="tut6.html">Tut 6</a><br>
   <a href="tut7.html">Tut 7</a><br>
