--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 <body>
   <h1>Tut Files Finder</h1>
   <p>Here you can find <strong>tut files</strong> and go to these files in only <strong>one click</strong></p>
-  <a href="tut4.html" target="_blank">Tut 4</a><br>
-  <a href="tut5.html">Tut 5</a><br>
-  <a href="tut6.html">Tut 6</a><br>
-  <a href="tut7.html">Tut 7</a><br>
-  <a href="tut8.html">Tut 8</a><br>
-  <a href="tut9.html">Tut 9</a><br>
-  <a href="tut10.html">Tut 10</a><br>
-  <a href="tut11.html">Tut 12</a><br>
-  <a href="tut13.html">Tut 13</a><br>
-  <a href="tut14.html">Tut 14</a><br>
-  <a href="tut16.html">Tut 16</a><br>
-  <a href="tut17.html">Tut 17</a><br>
-  <a href="tut18.html">Tut 18</a><br>
-  <a href="tut19.html">Tut 19</a><br>
-  <a href="tut20.html">Tut 20</a><br>
-  <a href="tut21.html">Tut 21</a><br>
-  <a href="tut22.html">Tut 22</a><br>
-  <a href="tut23.html">Tut 23</a><br>
-  <a href="tut24.html">Tut 24</a><br>
-  <a href="tut25.html">Tut 25</a><br>
+  <a href="tut4.html" target="/">Tut 4</a><br>
+  <a href="tut5.html" target="/">Tut 5</a><br>
+  <a href="tut6.html" target="/">Tut 6</a><br>
+  <a href="tut7.html" target="/">Tut 7</a><br>
+  <a href="tut8.html" target="/">Tut 8</a><br>
+  <a href="tut9.html" target="/">Tut 9</a><br>
+  <a href="tut10.html" target="/">Tut 10</a><br>
+  <a href="tut11.html" target="/">Tut 12</a><br>
+  <a href="tut13.html" target="/">Tut 13</a><br>
+  <a href="tut14.html" target="/">Tut 14</a><br>
+  <a href="tut16.html" target="/">Tut 16</a><br>
+  <a href="tut17.html" target="/">Tut 17</a><br>
+  <a href="tut18.html" target="/">Tut 18</a><br>
+  <a href="tut19.html" target="/">Tut 19</a><br>
+  <a href="tut20.html" target="/">Tut 20</a><br>
+  <a href="tut21.html" target="/">Tut 21</a><br>
+  <a href="tut22.html" target="/">Tut 22</a><br>
+  <a href="tut23.html" target="/">Tut 23</a><br>
+  <a href="tut24.html" target="/">Tut 24</a><br>
+  <a href="tut25.html" target="/">Tut 25</a><br>
   <!--<a href="tut4.html">Tut 4</a>
   <a href="tut4.html">Tut 4</a>
   <a href="tut4.html">Tut 4</a>
